story for refreshTree

--- a/src/stories/DomManipulation.stories.mdx
+++ b/src/stories/DomManipulation.stories.mdx
@@ -50,3 +50,26 @@ Remove all the children of an HTML element
   </Story>
 </Canvas>
 
+
+## refreshTree
+
+Refresh a DOM tree recursively
+
+[API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#refreshtree)
+
+<Canvas withSource="open">
+  <Story name="refreshTree">
+    { () => {
+      setInterval(() => {
+        UI.widgets.refreshTree(document.body)
+      }, 1000)
+      const refreshable = document.createElement('p')
+      refreshable.refresh = () => {
+        refreshable.innerText = new Date().getTime()
+      }
+      return refreshable
+    }
+    }
+  </Story>
+</Canvas>
+
