story for timestamp

--- a/src/stories/DateTime.stories.mdx
+++ b/src/stories/DateTime.stories.mdx
@@ -92,3 +92,17 @@ Get a short string representation of the current time
     }
   </Story>
 </Canvas>
+
+## timestamp
+
+Get a string representation of the current time
+
+[API documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#timestamp)
+
+<Canvas withSource="open">
+  <Story name="timestamp">
+    {
+      UI.widgets.timestamp()
+    }
+  </Story>
+</Canvas>
