--- a/src/stories/Images.stories.mdx
+++ b/src/stories/Images.stories.mdx
@@ -13,15 +13,15 @@ export const imageDecorator = (Story) => {
 `
 }
 
-<Meta title="Find images"/>
+<Meta title="Images"/>
 
-# findImage
+## findImage
 
 Find something we have as explicit image data for the thing
 
 [API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#findimage)
 
-## for foaf:Agent
+### for foaf:Agent
 
 <Canvas withSource="open">
   <Story name="for foaf:Agent" decorators={[imageDecorator]}>
@@ -31,7 +31,7 @@ Find something we have as explicit image data for the thing
   </Story>
 </Canvas>
 
-## for rdf:Resource
+### for rdf:Resource
 
 <Canvas withSource="open">
   <Story name="for rdf:Resource" decorators={[imageDecorator]}>
@@ -41,7 +41,7 @@ Find something we have as explicit image data for the thing
   </Story>
 </Canvas>
 
-## with vcard:hasPhoto
+### with vcard:hasPhoto
 
 <Canvas withSource="open">
   <Story name="with vcard:hasPhoto" decorators={[imageDecorator]}>
@@ -54,7 +54,7 @@ Find something we have as explicit image data for the thing
   </Story>
 </Canvas>
 
-## with foaf:img
+### with foaf:img
 
 <Canvas withSource="open">
   <Story name="with foaf:img" decorators={[imageDecorator]}>
@@ -67,13 +67,13 @@ Find something we have as explicit image data for the thing
   </Story>
 </Canvas>
 
-# findImageFromURI
+## findImageFromURI
 
 Find an image for this thing as a class
 
 [API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#findimagefromuri)
 
-## without favicon
+### without favicon
 
 <Canvas withSource="open">
   <Story name="without favicon" decorators={[imageDecorator]}>
@@ -83,7 +83,7 @@ Find an image for this thing as a class
   </Story>
 </Canvas>
 
-## favicon
+### favicon
 
 <Canvas withSource="open">
   <Story name="favicon" decorators={[imageDecorator]}>
@@ -93,7 +93,7 @@ Find an image for this thing as a class
   </Story>
 </Canvas>
 
-## Message-ID (mid:)
+### Message-ID (mid:)
 
 <Canvas withSource="open">
   <Story name="Message-ID" decorators={[imageDecorator]}>
@@ -103,7 +103,7 @@ Find an image for this thing as a class
   </Story>
 </Canvas>
 
-## E-Mail (mailto:)
+### E-Mail (mailto:)
 
 <Canvas withSource="open">
   <Story name="E-Mail" decorators={[imageDecorator]}>
@@ -113,7 +113,7 @@ Find an image for this thing as a class
   </Story>
 </Canvas>
 
-## imagesOf
+### imagesOf
 
 Set of suitable images
 
@@ -130,6 +130,25 @@ Set of suitable images
         store.add(thing, UI.ns.sioc('avatar'), avatar)
         store.add(thing, UI.ns.foaf('img'), image)
         return UI.widgets.imagesOf(thing, store)
+      }
+    }
+  </Story>
+</Canvas>
+
+## setImage
+
+[API Documentation](https://solid.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#setimage)
+
+<Canvas withSource="open">
+  <Story name="setImage">
+    {
+      () => {
+        const myTrip = UI.rdf.namedNode('http://example.com/#trip')
+        UI.store.add(myTrip, UI.ns.rdf('type'), UI.ns.trip('Trip'))
+        const img = document.createElement('img')
+        img.setAttribute('style', 'height:50px;width:50px;')
+        UI.widgets.setImage(img, myTrip)
+        return img
       }
     }
   </Story>
