--- a/src/stories/forms/Forms.stories.mdx
+++ b/src/stories/forms/Forms.stories.mdx
@@ -1,14 +1,6 @@
-import * as UI from '../../lib'
+import * as UI from '../../../lib'
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks'
-
-## See also
-
-  * [Forms intro](https://solid.github.io/solid-ui/Documentation/forms-intro.html)
-  * [Form ecosystem](https://solid.github.io/solid-ui//Documentation/form-ecosystem.html)
-  * [Form Playground](https://solid.github.io/form-playground/playground.html)
-  * [Form Browse](https://solid.github.io/form-playground/browse.html)
-  * [API docs](https://solid.github.io/solid-ui/Documentation/api/)
 
 <Meta title="Forms/appendForm" />
 
